force-app/main/default/objects/SVMXA360__ApplicationEventLog__e/SVMXA360__ApplicationEventLog__e.object-meta.xml
<CustomObject>
    <description>To publish information so that its logs can be captured in the Application Log object.</description>
    <label>Application Event Log</label>
    <pluralLabel>Application Event Logs</pluralLabel>
</CustomObject>