force-app/main/default/objects/SVMXA360__ApplicationEventLog__e/fields/SVMXA360__ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ApplicationName__c</fullName>
    <description>Name of the application for which the log is created.</description>
    <label>Application Name</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>