force-app/main/default/objects/SVMXA360__ApplicationEventLog__e/fields/SVMXA360__LogType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LogType__c</fullName>
    <description>Type of application log. For example, Debug, Info, Warning, or Error.</description>
    <label>Log Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>