force-app/main/default/objects/SVMXA360__ApplicationEventLog__e/fields/SVMXA360__OperationType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OperationType__c</fullName>
    <description>Type of operation performed. For example: invoking an API.</description>
    <label>Operation Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>