force-app/main/default/objects/SVMXA360__ApplicationEventLog__e/fields/SVMXA360__SourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceRecordId__c</fullName>
    <description>Salesforce record ID for which the application log is created.</description>
    <label>Source Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>