force-app/main/default/objects/SVMXA360__ApplicationEventLog__e/fields/SVMXA360__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Timestamp__c</fullName>
    <description>Timestamp at which the application log is created.</description>
    <label>Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>