force-app/main/default/objects/SVMXA360__ApplicationEventLog__e/fields/SVMXA360__UserId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UserId__c</fullName>
    <description>Context user ID for the application log.</description>
    <label>User</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>